// * Generaci√≥n autom√°tica con ts-proto y soporte NestJS
// * Ejecuta:
// npx protoc \
//   --plugin=../../../node_modules/.bin/protoc-gen-ts_proto.cmd \
//   --ts_proto_out=../generated/event-contracts \
//   --ts_proto_opt=nestJs=true \
//   event-contracts/microservice-name-events.proto

syntax = "proto3";

package microservice_name_events;

// ================================
// üì£ Eventos Kafka: MicroserviceName
// ================================

// Evento emitido cuando se crea una nueva entidad
message MicroserviceNameCreatedEvent {
  string id = 1;
  string name = 2;
  optional string description = 3;
  string createdAt = 4;
  optional string updatedAt = 5;
}

// Evento emitido cuando se actualiza la descripci√≥n
message MicroserviceNameDescriptionUpdatedEvent {
  string id = 1;
  string description = 2;
  optional string updatedAt = 3;
}

// Evento emitido cuando se renombra
message MicroserviceNameRenamedEvent {
  string id = 1;
  string oldName = 2;
  string newName = 3;
  optional string updatedAt = 4;
}
