// * Generaci칩n autom치tica con ts-proto y soporte NestJS
// * Ejecuta: 

//   --plugin=../../../node_modules/.bin/protoc-gen-ts_proto.cmd \
//   --ts_proto_out=../generated/microservice-name \
//   --ts_proto_opt=nestJs=true \
//   microservice-name/microservice-name.proto


syntax = "proto3";

package microservice_name;

//
// ================================
//   游닍 Servicio MicroserviceNameService
// ================================
//
// Contratos de comunicaci칩n entre el MicroserviceName y el servidor
// para la gesti칩n de ejemplos en la aplicaci칩n.
//
service MicroserviceNameService {
  // * Crear un nuevo ejemplo
  rpc createMicroserviceName(CreateMicroserviceNameDto) returns (MicroserviceName) {}

  // * Obtener todos los ejemplos (no paginado)
  rpc getAllMicroserviceName(MicroserviceNameEmpty) returns (MicroserviceNameList) {}

  // * Obtener un ejemplo por ID
  rpc getMicroserviceNameById(GetMicroserviceNameByIdDto) returns (MicroserviceName) {}

  // * Actualizar un ejemplo existente
  rpc updateMicroserviceName(UpdateMicroserviceNameDto) returns (MicroserviceName) {}

  // * Eliminar un ejemplo por ID
  rpc deleteMicroserviceName(GetMicroserviceNameByIdDto) returns (MicroserviceNameEmpty) {}

  // * Obtener ejemplos paginados (cl치sico page + limit)
//   rpc getPaginatedMicroserviceName(PaginationRequest) returns (PaginatedMicroserviceName) {}

  // * Soporte para scroll infinito (cursor-based pagination)
  rpc getMicroserviceNameByCursor(CursorPaginationRequest) returns (CursorPaginatedMicroserviceName) {}
}

//
// ================================
//   游닌 Mensajes de entrada
// ================================
//

// ! Mensaje vac칤o (com칰n en operaciones sin payload)
message MicroserviceNameEmpty {}

// * Crear nuevo ejemplo
message CreateMicroserviceNameDto {
  string name = 1;
  optional string description = 2;
}

// * Actualizar un ejemplo
message UpdateMicroserviceNameDto {
  string id = 1;
  UpdateMicroserviceNameData MicroserviceName = 2;
}

// * Obtener un ejemplo por su ID
message GetMicroserviceNameByIdDto {
  string id = 1;
}

// * Solicitud de paginaci칩n cl치sica
// message PaginationRequest {
//   int32 page = 1;  // P치gina actual (empieza en 1)
//   int32 limit = 2; // Elementos por p치gina
// }

// * Solicitud de paginaci칩n por cursor (scroll infinito)
message CursorPaginationRequest {
  string afterId = 1; // ID del 칰ltimo elemento visto
  int32 limit = 2;    // Elementos siguientes a devolver
}

//
// ================================
//   游닋 Mensajes de salida
// ================================
//

// * Lista de m칰ltiples ejemplos (no paginada)
message MicroserviceNameList {
  repeated MicroserviceName MicroserviceName = 1;
}

// * Lista de ejemplos paginada con `page`/`limit`
message PaginatedMicroserviceName {
  repeated MicroserviceName MicroserviceName = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

// * Lista de ejemplos paginada con `cursor`
message CursorPaginatedMicroserviceName {
  repeated MicroserviceName MicroserviceName= 1;
  string nextCursor = 2;
  bool hasMore = 3;
}

//
// ================================
//   游빔 Modelo base: MicroserviceName
// ================================
//

// * Representaci칩n base de un ejemplo
message MicroserviceName {
  string id = 1;            // ! ID 칰nico del ejemplo
  string name = 2;
  optional string description = 3;
}

// * Datos anidados para actualizar un ejemplo
message UpdateMicroserviceNameData {
  string name = 1;
  optional string description = 2;
}

//
// ================================
//   游닊 Mensajes de eventos Kafka
// ================================
//

// * Evento: MicroserviceName creado (Kafka)
message MicroserviceNameCreatedEvent {
  string id = 1;
  string name = 2;
  optional string description = 3;
  string createdAt = 4;
  string updatedAt = 5;
}
